// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker Date Range renders the UI snapshot correctly 1`] = `
<div
  className="css-16jbaby"
  data-testid="ds-datePicker"
  id="basic"
>
  <fieldset
    className="css-1xdhyk6"
    data-testid="ds-fieldset"
    id="basic-fieldset"
  >
    <legend>
      Select the full date you want to visit NYPL
    </legend>
    <div
      className="css-1vpopwd"
      data-testid="ds-simpleGrid"
      id="basic-formRow"
    >
      <div
        className="css-7ajbp2"
        data-testid="ds-simpleGrid"
        id="basic-formRow-grandchild0"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              data-testid="ds-textInput"
              id="basic-datePicker-start-textInput-componentWrapper"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                data-testid="ds-label"
                htmlFor="basic-datePicker-start-textInput"
                id="basic-datePicker-start-textInput-label"
              >
                From
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="From, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-0"
                  disabled={false}
                  id="basic-datePicker-start-textInput"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-01-02"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-7ajbp2"
        data-testid="ds-simpleGrid"
        id="basic-formRow-grandchild1"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              data-testid="ds-textInput"
              id="basic-datePicker-end-textInput-componentWrapper"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                data-testid="ds-label"
                htmlFor="basic-datePicker-end-textInput"
                id="basic-datePicker-end-textInput-label"
              >
                To
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="To, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-0"
                  disabled={false}
                  id="basic-datePicker-end-textInput"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-02-02"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-atomic={true}
      aria-live="polite"
      className="css-xy0wy2"
      data-isinvalid={false}
      data-testid="ds-helperErrorText"
      id="basic-helperErrorText"
    >
      <div
        className="css-0"
      />
    </div>
  </fieldset>
</div>
`;

exports[`DatePicker Date Range renders the UI snapshot correctly 2`] = `
<div
  className="css-16jbaby"
  data-testid="ds-datePicker"
  id="no-label"
>
  <fieldset
    className="css-1xdhyk6"
    data-testid="ds-fieldset"
    id="no-label-fieldset"
  >
    <legend>
      Select the date you want to visit NYPL
    </legend>
    <div
      className="css-1vpopwd"
      data-testid="ds-simpleGrid"
      id="no-label-formRow"
    >
      <div
        className="css-7ajbp2"
        data-testid="ds-simpleGrid"
        id="no-label-formRow-grandchild0"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              data-testid="ds-textInput"
              id="no-label-datePicker-start-textInput-componentWrapper"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                data-testid="ds-label"
                htmlFor="no-label-datePicker-start-textInput"
                id="no-label-datePicker-start-textInput-label"
              >
                From
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="From, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-0"
                  disabled={false}
                  id="no-label-datePicker-start-textInput"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-01-02"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-7ajbp2"
        data-testid="ds-simpleGrid"
        id="no-label-formRow-grandchild1"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              data-testid="ds-textInput"
              id="no-label-datePicker-end-textInput-componentWrapper"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                data-testid="ds-label"
                htmlFor="no-label-datePicker-end-textInput"
                id="no-label-datePicker-end-textInput-label"
              >
                To
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="To, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-0"
                  disabled={false}
                  id="no-label-datePicker-end-textInput"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-02-02"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-atomic={true}
      aria-live="polite"
      className="css-xy0wy2"
      data-isinvalid={false}
      data-testid="ds-helperErrorText"
      id="no-label-helperErrorText"
    >
      <div
        className="css-0"
      />
    </div>
  </fieldset>
</div>
`;

exports[`DatePicker Date Range renders the UI snapshot correctly 3`] = `
<div
  className="css-16jbaby"
  data-testid="ds-datePicker"
  id="custom-format"
>
  <fieldset
    className="css-1xdhyk6"
    data-testid="ds-fieldset"
    id="custom-format-fieldset"
  >
    <legend>
      Select the date you want to visit NYPL
    </legend>
    <div
      className="css-1vpopwd"
      data-testid="ds-simpleGrid"
      id="custom-format-formRow"
    >
      <div
        className="css-7ajbp2"
        data-testid="ds-simpleGrid"
        id="custom-format-formRow-grandchild0"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              data-testid="ds-textInput"
              id="custom-format-datePicker-start-textInput-componentWrapper"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                data-testid="ds-label"
                htmlFor="custom-format-datePicker-start-textInput"
                id="custom-format-datePicker-start-textInput-label"
              >
                From
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="From, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-0"
                  disabled={false}
                  id="custom-format-datePicker-start-textInput"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  required={false}
                  step={null}
                  type="text"
                  value="1988/02/01"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-7ajbp2"
        data-testid="ds-simpleGrid"
        id="custom-format-formRow-grandchild1"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              data-testid="ds-textInput"
              id="custom-format-datePicker-end-textInput-componentWrapper"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                data-testid="ds-label"
                htmlFor="custom-format-datePicker-end-textInput"
                id="custom-format-datePicker-end-textInput-label"
              >
                To
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="To, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-0"
                  disabled={false}
                  id="custom-format-datePicker-end-textInput"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  required={false}
                  step={null}
                  type="text"
                  value="1988/02/02"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-atomic={true}
      aria-live="polite"
      className="css-xy0wy2"
      data-isinvalid={false}
      data-testid="ds-helperErrorText"
      id="custom-format-helperErrorText"
    >
      <div
        className="css-0"
      />
    </div>
  </fieldset>
</div>
`;

exports[`DatePicker Date Range renders the UI snapshot correctly 4`] = `
<div
  className="css-16jbaby"
  data-testid="ds-datePicker"
  id="invalid"
>
  <fieldset
    className="css-1xdhyk6"
    data-testid="ds-fieldset"
    id="invalid-fieldset"
  >
    <legend>
      Select the date you want to visit NYPL
    </legend>
    <div
      className="css-1vpopwd"
      data-testid="ds-simpleGrid"
      id="invalid-formRow"
    >
      <div
        className="css-7ajbp2"
        data-testid="ds-simpleGrid"
        id="invalid-formRow-grandchild0"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              data-testid="ds-textInput"
              id="invalid-datePicker-start-textInput-componentWrapper"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                data-testid="ds-label"
                htmlFor="invalid-datePicker-start-textInput"
                id="invalid-datePicker-start-textInput-label"
              >
                From
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-describedby="invalid-datePicker-start-textInput-helperErrorText"
                  aria-invalid={true}
                  aria-label="From, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-0"
                  disabled={false}
                  id="invalid-datePicker-start-textInput"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-01-02"
                />
              </div>
              <div
                aria-atomic={true}
                aria-live="polite"
                className="css-1xdhyk6"
                data-isinvalid={true}
                data-testid="ds-helperErrorText"
                id="invalid-datePicker-start-textInput-helperErrorText"
              >
                <div
                  className="css-0"
                  dangerouslySetInnerHTML={
                    {
                      "__html": "Please select a valid date.",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-7ajbp2"
        data-testid="ds-simpleGrid"
        id="invalid-formRow-grandchild1"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              data-testid="ds-textInput"
              id="invalid-datePicker-end-textInput-componentWrapper"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                data-testid="ds-label"
                htmlFor="invalid-datePicker-end-textInput"
                id="invalid-datePicker-end-textInput-label"
              >
                To
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-describedby="invalid-datePicker-end-textInput-helperErrorText"
                  aria-invalid={true}
                  aria-label="To, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-0"
                  disabled={false}
                  id="invalid-datePicker-end-textInput"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-02-02"
                />
              </div>
              <div
                aria-atomic={true}
                aria-live="polite"
                className="css-1xdhyk6"
                data-isinvalid={true}
                data-testid="ds-helperErrorText"
                id="invalid-datePicker-end-textInput-helperErrorText"
              >
                <div
                  className="css-0"
                  dangerouslySetInnerHTML={
                    {
                      "__html": "Please select a valid date.",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-atomic={true}
      aria-live="polite"
      className="css-xy0wy2"
      data-isinvalid={false}
      data-testid="ds-helperErrorText"
      id="invalid-helperErrorText"
    >
      <div
        className="css-0"
        dangerouslySetInnerHTML={
          {
            "__html": "Note that the Library may be closed on Sundays.",
          }
        }
      />
    </div>
  </fieldset>
</div>
`;

exports[`DatePicker Date Range renders the UI snapshot correctly 5`] = `
<div
  className="css-16jbaby"
  data-testid="ds-datePicker"
  id="disabled"
>
  <fieldset
    className="css-1xdhyk6"
    data-testid="ds-fieldset"
    id="disabled-fieldset"
  >
    <legend>
      Select the date you want to visit NYPL
    </legend>
    <div
      className="css-1vpopwd"
      data-testid="ds-simpleGrid"
      id="disabled-formRow"
    >
      <div
        className="css-7ajbp2"
        data-testid="ds-simpleGrid"
        id="disabled-formRow-grandchild0"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              data-testid="ds-textInput"
              id="disabled-datePicker-start-textInput-componentWrapper"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                data-testid="ds-label"
                htmlFor="disabled-datePicker-start-textInput"
                id="disabled-datePicker-start-textInput-label"
              >
                From
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="From, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-0"
                  disabled={true}
                  id="disabled-datePicker-start-textInput"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-01-02"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-7ajbp2"
        data-testid="ds-simpleGrid"
        id="disabled-formRow-grandchild1"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container "
          >
            <span
              aria-live="polite"
              className="react-datepicker__aria-live"
              role="alert"
            />
            <div
              className="css-1u8qly9"
              data-testid="ds-textInput"
              id="disabled-datePicker-end-textInput-componentWrapper"
              onBlur={[Function]}
              onKeyDown={[Function]}
              readOnly={false}
            >
              <label
                className="css-1xdhyk6"
                data-testid="ds-label"
                htmlFor="disabled-datePicker-end-textInput"
                id="disabled-datePicker-end-textInput-label"
              >
                To
              </label>
              <div
                className="css-79elbk"
              >
                <input
                  aria-label="To, Press tab to access the calendar."
                  autoComplete={null}
                  className="chakra-input css-0"
                  disabled={true}
                  id="disabled-datePicker-end-textInput"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  required={false}
                  step={null}
                  type="text"
                  value="1988-02-02"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-atomic={true}
      aria-live="polite"
      className="css-xy0wy2"
      data-isinvalid={false}
      data-testid="ds-helperErrorText"
      id="disabled-helperErrorText"
    >
      <div
        className="css-0"
        dangerouslySetInnerHTML={
          {
            "__html": "Note that the Library may be closed on Sundays.",
          }
        }
      />
    </div>
  </fieldset>
</div>
`;

exports[`DatePicker Single input renders the UI snapshot correctly 1`] = `
<div
  className="css-16jbaby"
  data-testid="ds-datePicker"
  id="basic"
>
  <div
    className="css-7ajbp2"
    data-testid="ds-simpleGrid"
    id="basic-startForm"
  >
    <div
      className="react-datepicker-wrapper"
    >
      <div
        className="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          className="react-datepicker__aria-live"
          role="alert"
        />
        <div
          className="css-1u8qly9"
          data-testid="ds-textInput"
          id="basic-datePicker-start-textInput-componentWrapper"
          onBlur={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
        >
          <label
            className="css-1xdhyk6"
            data-testid="ds-label"
            htmlFor="basic-datePicker-start-textInput"
            id="basic-datePicker-start-textInput-label"
          >
            Select the full date you want to visit NYPL
          </label>
          <div
            className="css-79elbk"
          >
            <input
              aria-label="Select the full date you want to visit NYPL, Press tab to access the calendar."
              autoComplete={null}
              className="chakra-input css-0"
              disabled={false}
              id="basic-datePicker-start-textInput"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              required={false}
              step={null}
              type="text"
              value="1988-01-02"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-xy0wy2"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="basic-helperErrorText"
  />
</div>
`;

exports[`DatePicker Single input renders the UI snapshot correctly 2`] = `
<div
  className="css-16jbaby"
  data-testid="ds-datePicker"
  id="no-label"
>
  <div
    className="css-7ajbp2"
    data-testid="ds-simpleGrid"
    id="no-label-startForm"
  >
    <div
      className="react-datepicker-wrapper"
    >
      <div
        className="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          className="react-datepicker__aria-live"
          role="alert"
        />
        <div
          className="css-1u8qly9"
          data-testid="ds-textInput"
          id="no-label-datePicker-start-textInput-componentWrapper"
          onBlur={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
        >
          <div
            className="css-79elbk"
          >
            <input
              aria-label="Select the date you want to visit NYPL, Press tab to access the calendar."
              autoComplete={null}
              className="chakra-input css-0"
              disabled={false}
              id="no-label-datePicker-start-textInput"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              required={false}
              step={null}
              type="text"
              value="1988-01-02"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-xy0wy2"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="no-label-helperErrorText"
  />
</div>
`;

exports[`DatePicker Single input renders the UI snapshot correctly 3`] = `
<div
  className="css-16jbaby"
  data-testid="ds-datePicker"
  id="custom-format"
>
  <div
    className="css-7ajbp2"
    data-testid="ds-simpleGrid"
    id="custom-format-startForm"
  >
    <div
      className="react-datepicker-wrapper"
    >
      <div
        className="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          className="react-datepicker__aria-live"
          role="alert"
        />
        <div
          className="css-1u8qly9"
          data-testid="ds-textInput"
          id="custom-format-datePicker-start-textInput-componentWrapper"
          onBlur={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
        >
          <label
            className="css-1xdhyk6"
            data-testid="ds-label"
            htmlFor="custom-format-datePicker-start-textInput"
            id="custom-format-datePicker-start-textInput-label"
          >
            Select the date you want to visit NYPL
          </label>
          <div
            className="css-79elbk"
          >
            <input
              aria-label="Select the date you want to visit NYPL, Press tab to access the calendar."
              autoComplete={null}
              className="chakra-input css-0"
              disabled={false}
              id="custom-format-datePicker-start-textInput"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              required={false}
              step={null}
              type="text"
              value="1988/02/01"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-xy0wy2"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="custom-format-helperErrorText"
  />
</div>
`;

exports[`DatePicker Single input renders the UI snapshot correctly 4`] = `
<div
  className="css-16jbaby"
  data-testid="ds-datePicker"
  id="invalid"
>
  <div
    className="css-7ajbp2"
    data-testid="ds-simpleGrid"
    id="invalid-startForm"
  >
    <div
      className="react-datepicker-wrapper"
    >
      <div
        className="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          className="react-datepicker__aria-live"
          role="alert"
        />
        <div
          className="css-1u8qly9"
          data-testid="ds-textInput"
          id="invalid-datePicker-start-textInput-componentWrapper"
          onBlur={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
        >
          <label
            className="css-1xdhyk6"
            data-testid="ds-label"
            htmlFor="invalid-datePicker-start-textInput"
            id="invalid-datePicker-start-textInput-label"
          >
            Select the date you want to visit NYPL
          </label>
          <div
            className="css-79elbk"
          >
            <input
              aria-describedby="invalid-datePicker-start-textInput-helperErrorText"
              aria-invalid={true}
              aria-label="Select the date you want to visit NYPL, Press tab to access the calendar."
              autoComplete={null}
              className="chakra-input css-0"
              disabled={false}
              id="invalid-datePicker-start-textInput"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              required={false}
              step={null}
              type="text"
              value="1988-01-02"
            />
          </div>
          <div
            aria-atomic={true}
            aria-live="polite"
            className="css-1xdhyk6"
            data-isinvalid={true}
            data-testid="ds-helperErrorText"
            id="invalid-datePicker-start-textInput-helperErrorText"
          >
            <div
              className="css-0"
              dangerouslySetInnerHTML={
                {
                  "__html": "Please select a valid date.",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-xy0wy2"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="invalid-helperErrorText"
  />
</div>
`;

exports[`DatePicker Single input renders the UI snapshot correctly 5`] = `
<div
  className="css-16jbaby"
  data-testid="ds-datePicker"
  id="disabled"
>
  <div
    className="css-7ajbp2"
    data-testid="ds-simpleGrid"
    id="disabled-startForm"
  >
    <div
      className="react-datepicker-wrapper"
    >
      <div
        className="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          className="react-datepicker__aria-live"
          role="alert"
        />
        <div
          className="css-1u8qly9"
          data-testid="ds-textInput"
          id="disabled-datePicker-start-textInput-componentWrapper"
          onBlur={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
        >
          <label
            className="css-1xdhyk6"
            data-testid="ds-label"
            htmlFor="disabled-datePicker-start-textInput"
            id="disabled-datePicker-start-textInput-label"
          >
            Select the date you want to visit NYPL
          </label>
          <div
            className="css-79elbk"
          >
            <input
              aria-describedby="disabled-datePicker-start-textInput-helperErrorText"
              aria-label="Select the date you want to visit NYPL, Press tab to access the calendar."
              autoComplete={null}
              className="chakra-input css-0"
              disabled={true}
              id="disabled-datePicker-start-textInput"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              required={false}
              step={null}
              type="text"
              value="1988-01-02"
            />
          </div>
          <div
            aria-atomic={true}
            aria-live="polite"
            className="css-1xdhyk6"
            data-isinvalid={false}
            data-testid="ds-helperErrorText"
            id="disabled-datePicker-start-textInput-helperErrorText"
          >
            <div
              className="css-0"
              dangerouslySetInnerHTML={
                {
                  "__html": "Note that the Library may be closed on Sundays.",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-xy0wy2"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="disabled-helperErrorText"
  />
</div>
`;

exports[`DatePicker Single input renders the UI snapshot correctly 6`] = `
<div
  className="css-16t57xt"
  data-testid="ds-datePicker"
  id="chakra"
>
  <div
    className="css-7ajbp2"
    data-testid="ds-simpleGrid"
    id="chakra-startForm"
  >
    <div
      className="react-datepicker-wrapper"
    >
      <div
        className="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          className="react-datepicker__aria-live"
          role="alert"
        />
        <div
          className="css-1u8qly9"
          data-testid="ds-textInput"
          id="chakra-datePicker-start-textInput-componentWrapper"
          onBlur={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
        >
          <label
            className="css-1xdhyk6"
            data-testid="ds-label"
            htmlFor="chakra-datePicker-start-textInput"
            id="chakra-datePicker-start-textInput-label"
          >
            Select the date you want to visit NYPL
          </label>
          <div
            className="css-79elbk"
          >
            <input
              aria-describedby="chakra-datePicker-start-textInput-helperErrorText"
              aria-label="Select the date you want to visit NYPL, Press tab to access the calendar."
              autoComplete={null}
              className="chakra-input css-0"
              disabled={false}
              id="chakra-datePicker-start-textInput"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              required={false}
              step={null}
              type="text"
              value="1988-01-02"
            />
          </div>
          <div
            aria-atomic={true}
            aria-live="polite"
            className="css-1xdhyk6"
            data-isinvalid={false}
            data-testid="ds-helperErrorText"
            id="chakra-datePicker-start-textInput-helperErrorText"
          >
            <div
              className="css-0"
              dangerouslySetInnerHTML={
                {
                  "__html": "Note that the Library may be closed on Sundays.",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-xy0wy2"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="chakra-helperErrorText"
  />
</div>
`;

exports[`DatePicker Single input renders the UI snapshot correctly 7`] = `
<div
  className="css-16jbaby"
  data-testid="datepicker"
  id="props"
>
  <div
    className="css-7ajbp2"
    data-testid="ds-simpleGrid"
    id="props-startForm"
  >
    <div
      className="react-datepicker-wrapper"
    >
      <div
        className="react-datepicker__input-container "
      >
        <span
          aria-live="polite"
          className="react-datepicker__aria-live"
          role="alert"
        />
        <div
          className="css-1u8qly9"
          data-testid="ds-textInput"
          id="props-datePicker-start-textInput-componentWrapper"
          onBlur={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
        >
          <label
            className="css-1xdhyk6"
            data-testid="ds-label"
            htmlFor="props-datePicker-start-textInput"
            id="props-datePicker-start-textInput-label"
          >
            Select the date you want to visit NYPL
          </label>
          <div
            className="css-79elbk"
          >
            <input
              aria-describedby="props-datePicker-start-textInput-helperErrorText"
              aria-label="Select the date you want to visit NYPL, Press tab to access the calendar."
              autoComplete={null}
              className="chakra-input css-0"
              disabled={false}
              id="props-datePicker-start-textInput"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              required={false}
              step={null}
              type="text"
              value="1988-01-02"
            />
          </div>
          <div
            aria-atomic={true}
            aria-live="polite"
            className="css-1xdhyk6"
            data-isinvalid={false}
            data-testid="ds-helperErrorText"
            id="props-datePicker-start-textInput-helperErrorText"
          >
            <div
              className="css-0"
              dangerouslySetInnerHTML={
                {
                  "__html": "Note that the Library may be closed on Sundays.",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-xy0wy2"
    data-isinvalid={false}
    data-testid="ds-helperErrorText"
    id="props-helperErrorText"
  />
</div>
`;
